--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
 
       - name: Démarrage des services avec Docker Compose
         run: |
-          docker-compose up -d --build
+          docker compose up -d --build
 
       - name: Attente du démarrage des services
         run: |
@@ -155,7 +155,7 @@ jobs:
 
       - name: Vérification des services
         run: |
-          docker-compose ps
+          docker compose ps
 
       - name: Test de santé du backend
         run: |
@@ -175,24 +175,27 @@ jobs:
 
       - name: Test de la base de données
         run: |
-          docker-compose exec -T db psql -U devops_user -d devops_db -c "SELECT COUNT(*) FROM articles;" || exit 1
+          docker compose exec -T db psql -U devops_user -d devops_db -c "SELECT COUNT(*) FROM articles;" || exit 1
           echo "✓ Base de données accessible"
 
       - name: Affichage des logs en cas d'erreur
         if: failure()
         run: |
-          docker-compose logs
+          docker compose logs
 
       - name: Arrêt des services
         if: always()
         run: |
-          docker-compose down -v
+          docker compose down -v
 
   # Job 6: Analyse de sécurité
   security-scan:
     name: Scan de sécurité
     runs-on: ubuntu-latest
     needs: build-docker
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout du code
@@ -203,27 +206,13 @@ jobs:
         with:
           scan-type: 'fs'
           scan-ref: './backend'
-          format: 'sarif'
-          output: 'trivy-backend-results.sarif'
-
-      - name: Upload des résultats Trivy pour le backend
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: 'trivy-backend-results.sarif'
-          category: 'backend-security'
+          format: 'table'
+          exit-code: '0'
 
       - name: Scan de sécurité du frontend avec Trivy
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: './frontend'
-          format: 'sarif'
-          output: 'trivy-frontend-results.sarif'
-
-      - name: Upload des résultats Trivy pour le frontend
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: 'trivy-frontend-results.sarif'
-          category: 'frontend-security'
+          format: 'table'
+          exit-code: '0'
