--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,12 +30,9 @@ jobs:
           body_path: release_notes.md
 
   publish-docker:
-    name: Build & Push Docker Hub
+    name: Build & Push All-in-One Image
     runs-on: ubuntu-latest
     needs: release
-    strategy:
-      matrix:
-        service: [backend, frontend]
 
     env:
       DOCKERHUB_IMAGE: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/tp-devops
@@ -57,23 +54,22 @@ jobs:
         id: v
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      - name: Build & Push ${{ matrix.service }}
+      - name: Build & Push Image Unique
         uses: docker/build-push-action@v6
         with:
-          context: ./${{ matrix.service }}
-          file: ./${{ matrix.service }}/Dockerfile
+          context: .
+          file: ./Dockerfile.prod
           push: true
           platforms: linux/amd64,linux/arm64
-          # On pousse DANS le même repo Docker Hub "tp-devops",
-          # avec des tags préfixés par service (backend|frontend)
+          # Image unique contenant backend + frontend + PostgreSQL
           tags: |
-            ${{ env.DOCKERHUB_IMAGE }}:${{ matrix.service }}-${{ steps.v.outputs.VERSION }}
-            ${{ env.DOCKERHUB_IMAGE }}:${{ matrix.service }}-latest
+            ${{ env.DOCKERHUB_IMAGE }}:${{ steps.v.outputs.VERSION }}
+            ${{ env.DOCKERHUB_IMAGE }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  deploy-render-backend:
-    name: Deploy Render (backend)
+  deploy-render:
+    name: Deploy to Render
     runs-on: ubuntu-latest
     needs: publish-docker
     steps:
@@ -82,24 +78,8 @@ jobs:
           curl -sfS -X POST \
             -H "Authorization: Bearer $RENDER_API_KEY" \
             -H "Content-Type: application/json" \
-            "https://api.render.com/v1/services/$RENDER_SERVICE_ID_BACKEND/deploys" \
+            "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
             -d '{"clearCache":false}'
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID_BACKEND: ${{ secrets.RENDER_SERVICE_ID_BACKEND }}
-
-  deploy-render-frontend:
-    name: Deploy Render (frontend)
-    runs-on: ubuntu-latest
-    needs: publish-docker
-    steps:
-      - name: Trigger Render deploy
-        run: |
-          curl -sfS -X POST \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            -H "Content-Type: application/json" \
-            "https://api.render.com/v1/services/$RENDER_SERVICE_ID_FRONTEND/deploys" \
-            -d '{"clearCache":false}'
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID_FRONTEND: ${{ secrets.RENDER_SERVICE_ID_FRONTEND }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
